# demo

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  BACKEND_GUIDE.md  README.md  claude_desktop_config.json  mcp_config_example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run_backend.py  run_mcp_inspector.py  run_server.py
backend/app/: main.py  model_handler.py  utils.py
backend/database/: createTables.py  insertTopic.py  insert_LessonUnit.py  insert_prerequisite.py
backend/model/: lstm.pth  lstm_attn.pth  lstm_model.pth
backend/src/backend/: __init__.py  main.py
backend/src/backend/clients/: __init__.py
backend/src/backend/tests/: __init__.py  test_backend.py
backend/src/components/: SupabaseTest.js
backend/src/mcp_server/: __init__.py
backend/src/mcp_server/core/: __init__.py  config.py  server.py
backend/src/mcp_server/prompts/: __init__.py
backend/src/mcp_server/resources/: __init__.py
backend/src/mcp_server/tests/: __init__.py
backend/src/mcp_server/tools/: __init__.py  base_tool.py
backend/src/shared/: __init__.py  database.py  formatters.py  hybrid_search.py
ui/: .env.example  .gitignore  index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/pages/: CameraSignPractice.jsx  Community.jsx  Courses.jsx  DiscussionDetail.jsx  FlashCardsPractice.jsx  Home.jsx  Login.jsx  LoginModal.jsx  Practice.jsx  Register.jsx  RegisterModal.jsx  Search.jsx  SignSentences.jsx  TopicPage.jsx  Topics.jsx  index.js
ui/src/services/: api.js
(+5 files in other folders)
